[gd_scene load_steps=12 format=3 uid="uid://wad8ma2a2mjo"]

[ext_resource type="Texture2D" uid="uid://calxe053tjfq7" path="res://Assets/Towers/towerDefense_tile251.png" id="1_onoyp"]
[ext_resource type="Script" path="res://actors/objs/Missile.gd" id="1_yetk5"]
[ext_resource type="PackedScene" uid="uid://b5uhanmc0mgfu" path="res://Assets/fx/Explosion Scenes/MissileTrail.tscn" id="3_x3ukx"]
[ext_resource type="Texture2D" uid="uid://bhv6npku0p86h" path="res://Assets/fx/glow.png" id="5_byi57"]
[ext_resource type="Texture2D" uid="uid://dbqhboefwnbd" path="res://Assets/fx/Explosion Scenes/hit.png" id="5_nl4ef"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vyqv1"]
radius = 13.0384

[sub_resource type="GDScript" id="GDScript_gk2bk"]
script/source = "extends MissileTrail

func _get_position():
	return get_parent().position
"

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8qtal"]
blend_mode = 1
light_mode = 1

[sub_resource type="Animation" id="Animation_lrwig"]
length = 0.001

[sub_resource type="Animation" id="Animation_jd6fw"]
resource_name = "missilehit"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.4),
"transitions": PackedFloat32Array(1, 1, 13.9288),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsy7h"]
_data = {
"RESET": SubResource("Animation_lrwig"),
"missilehit": SubResource("Animation_jd6fw")
}

[node name="Bullet" type="Node2D"]
z_index = 5
script = ExtResource("1_yetk5")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2.09375, 2.09375)
texture = ExtResource("1_onoyp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -0.5)
scale = Vector2(1.3, 0.95)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vyqv1")

[node name="MissileTrail" parent="." instance=ExtResource("3_x3ukx")]
show_behind_parent = true
top_level = true
position = Vector2(-17, 0)
width = 8.0
script = SubResource("GDScript_gk2bk")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
modulate = Color(0.984314, 0.678431, 0.470588, 1)
material = SubResource("CanvasItemMaterial_8qtal")
position = Vector2(0.000599742, 0)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("5_nl4ef")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsy7h")
}

[node name="Glow" type="Sprite2D" parent="."]
modulate = Color(0.513726, 0.27451, 0, 0.788235)
position = Vector2(-1.90735e-06, 4.76837e-07)
scale = Vector2(0.337646, 0.337646)
texture = ExtResource("5_byi57")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
